# psion-org2-bluetooth-adapter

./: README.md
code/: grab.sh
code/org2-bluetooth-adapter/: org2-bluetooth-adapter.c
code/org2-bluetooth-adapter-eclipse/: .cproject  .project  CMakeCache.txt  cmake_install.cmake  org2-bluetooth-adapter.dis  org2-bluetooth-adapter.uf2
code/org2-bluetooth-adapter-eclipse/elf2uf2/: Makefile  cmake_install.cmake
code/org2-bluetooth-adapter-eclipse/org2-bluetooth-adapter-eclipse/: .cproject  .project  CMakeCache.txt  Makefile  org2-bluetooth-adapter.dis  org2-bluetooth-adapter.elf  org2-bluetooth-adapter.elf.map  org2-bluetooth-adapter.hex  org2-bluetooth-adapter.pio.h  org2-bluetooth-adapter.uf2
code/org2-bluetooth-adapter-eclipse/pico-sdk/: Makefile
code/org2-bluetooth-adapter-eclipse/pico_extras/: Makefile
code/org2-bluetooth-adapter-eclipse/pioasm/: .project  CMakeCache.txt  Makefile  cmake_install.cmake
code/org2-bluetooth-adapter/org2-bluetooth-adapter/: #org2-top-slot-breakout.c#  CMakeLists.txt  match.c  match.h  org2-bluetooth-adapter.c  org2-bluetooth-adapter.h  org2-bluetooth-adapter.pio  org2-bluetooth-adapter.pio.original.working  wireless-bluetooth-adapter.c  wireless-bluetooth-adapter.h
notes/: .~lock.psion_organiser_2_comms_link_notes.odt#  Southcom.opl  psion_organiser_2_comms_link_notes.odt
pcbs/pcb_using_pico/: file613E6C74.sch
pcbs/pcb_using_pico/psion-org2-bluetooth-adapter/: Power.sch  Power.sch-bak  a-cache.lib  a.sch  a.sch-bak  a1.sch  bt-cache.lib  bt.sch-bak  bt1_0.sch  file613E6C74.sch  file61D041BF.sch  file61D041BF.sch-bak  fp-info-cache  p1.sch  power2.sch  x1.sch  (+8 more)
(+143 files in other folders)
